# tado

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  tado.py
tado/: main.py  models.py  tado.py
