[tool.poetry]
name = "tado"
version = "0.1.0"
description = ""
authors = ["Aaron Traynor <aaron.traynor@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
python-tado = "^0.17.0"
isort = "^5.12.0"
requests = "^2.31.0"
types-requests = "^2.31.0.20240406"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
black = "^23.10.1"
flake8 = "^6.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[[tool.mypy.overrides]]
module = [
  "PyTado.*",
]
ignore_missing_imports = true