[tool.poetry]
name = "tado"
version = "0.1.0"
description = ""
authors = ["Aaron Traynor <aaron.traynor@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
python-tado = "^0.17.0"
isort = "^5.12.0"
requests = "^2.32.0"
types-requests = "^2.31.0.20240406"
retry = "^0.9.2"
pydantic = "^2.9.2"
types-retry = "^0.9.9.4"
urllib3 = ">=2.2.2" # Force version to fix vulnerability. Package is required by pypi.
certifi = ">=2024.07.04" # Force version to fix vulnerability. Package is required by pypi.

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
black = "^23.10.1"
flake8 = "^6.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[[tool.mypy.overrides]]
module = [
  "PyTado.*",
]
ignore_missing_imports = true